<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:background="@color/purple"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_nav_menu" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/alert"
        android:layout_width="@dimen/dp_50"
        android:layout_height="@dimen/dp_50"
        android:layout_margin="@dimen/dp_20"
        android:backgroundTint="@color/white"
        android:src="@drawable/ic_icoactionalert"
        app:fabCustomSize="@dimen/dp_50"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/locate"
        android:layout_width="@dimen/dp_50"
        android:layout_height="@dimen/dp_50"
        android:layout_margin="@dimen/dp_20"
        android:backgroundTint="@color/white"
        android:src="@drawable/ic_icoactionlocate"
        app:fabCustomSize="@dimen/dp_50"
        app:layout_constraintBottom_toTopOf="@id/layoutCurrentLoc"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- layout Rent a car -->
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_20"
        android:text="@string/rent_a_car"
        android:textColor="@color/pink"
        android:textSize="@dimen/sp_24"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/layoutCurrentLoc"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutCurrentLoc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_20"
        android:background="@drawable/rounded_outline_white"
        app:layout_constraintBottom_toTopOf="@id/bottomNavigationView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/currentAddressImageView"
            android:layout_width="@dimen/dp_50"
            android:layout_height="@dimen/dp_50"
            android:layout_margin="@dimen/dp_10"
            android:padding="@dimen/dp_5"
            android:src="@drawable/ic_icoaddress"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/currentAddressLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_5"
            android:text="@string/location"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_10"
            app:layout_constraintStart_toEndOf="@id/currentAddressImageView"
            app:layout_constraintTop_toTopOf="@id/currentAddressImageView" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/currentAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_10"
            android:text="@string/current_location"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_14"
            app:layout_constraintBottom_toBottomOf="@id/currentAddressImageView"
            app:layout_constraintStart_toEndOf="@id/currentAddressImageView"
            app:layout_constraintTop_toBottomOf="@id/currentAddressLabel" />

        <View
            android:id="@+id/divider1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/dp_10"
            android:background="@color/grey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/currentAddressImageView" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/go"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:background="@color/green"
            android:padding="@dimen/dp_20"
            android:gravity="center_vertical"
            android:text="@string/go"
            android:textSize="@dimen/sp_14"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider1" />

        <View
            android:id="@+id/verticalDivider"
            android:layout_width="@dimen/dp_1"
            android:layout_height="0dp"
            android:background="@color/grey"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/go"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider1" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/dateTimeImageView"
            android:layout_width="@dimen/dp_50"
            android:layout_height="@dimen/dp_50"
            android:layout_margin="@dimen/dp_10"
            android:padding="@dimen/dp_5"
            android:src="@drawable/ic_icodated"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider1" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/dateAndTimeLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_5"
            android:text="@string/date_and_time"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_10"
            app:layout_constraintEnd_toStartOf="@id/verticalDivider"
            app:layout_constraintStart_toEndOf="@id/dateTimeImageView"
            app:layout_constraintTop_toTopOf="@id/dateTimeImageView" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/dateAndTime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_10"
            android:text="@string/now"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_14"
            app:layout_constraintBottom_toBottomOf="@id/dateTimeImageView"
            app:layout_constraintEnd_toStartOf="@id/verticalDivider"
            app:layout_constraintStart_toEndOf="@id/dateTimeImageView"
            app:layout_constraintTop_toBottomOf="@id/dateAndTimeLabel" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/durationImageView"
            android:layout_width="@dimen/dp_50"
            android:layout_height="@dimen/dp_50"
            android:layout_margin="@dimen/dp_10"
            android:padding="@dimen/dp_5"
            android:src="@drawable/ic_icotime"
            app:layout_constraintStart_toEndOf="@id/verticalDivider"
            app:layout_constraintTop_toBottomOf="@id/divider1" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/durationLabel"
            android:layout_width="0dp"
            android:textAlignment="textStart"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_5"
            android:text="@string/duration"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_10"
            app:layout_constraintEnd_toStartOf="@id/go"
            app:layout_constraintStart_toEndOf="@id/durationImageView"
            app:layout_constraintTop_toTopOf="@id/durationImageView" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/duration"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAlignment="textStart"
            android:layout_marginStart="@dimen/dp_10"
            android:text="@string/hr_1"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_14"
            app:layout_constraintEnd_toStartOf="@id/go"
            app:layout_constraintBottom_toBottomOf="@id/durationImageView"
            app:layout_constraintStart_toEndOf="@id/durationImageView"
            app:layout_constraintTop_toBottomOf="@id/durationLabel" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>